--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Csopimunka</title>
+    <meta name="author" content="Dekany Mate, Katona Janos, Palinkas Arnold">
+    <link rel="stylesheet" href="stilus.css">
+</head>
+<body>
+    <main>
+        <header>
 
+        </header>
+        <nav id="navigacio">
+            <ul id="home">
+                <li><a href="index.html">Kezdőlap</a></li>
+            </ul>
+            <ul id="menu">
+                <li><a href="galeria.html">Galéria</a></li>
+                <li><a href="flex.html">Képgaléria 2</a></li>
+            </ul>
+        </nav>
+        <article>
+
+        </article>
+        <footer>
+
+        </footer>
+    </main>
+</body>
+</html>
