--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a href="index.html">Kezdőlap</a></li>
             </ul>
             <ul id="menu">
-                <li><a href="galeria.html">Galéria</a></li>
-                <li><a href="flex.html">Képgaléria 2</a></li>
+                <li><a href="galeria1.html">Galéria</a></li>
+                <li><a href="galeria2.html">Képgaléria 2</a></li>
             </ul>
         </nav>
         <article>
