--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
                 <li><a href="galeria2.html">Képgaléria 2</a></li>
             </ul>
         </nav>
-        <article>
-
-        </article>
+        <section>
+            <article>
+                <a href="galeria1"><img src="kepek/kep1.jpg" alt=""></a>
+            </article>
+            <article>
+                <a href="galeria2"><img src="kepek/kep2.jpg" alt=""></a>
+            </article>
+        </section>
         <footer>
-
+            Dékány Máté, Katona János, Pálinkás Arnold
         </footer>
     </main>
 </body>
