--- a/galeria1.html
+++ b/galeria1.html
@@ -6,6 +6,7 @@
     <title>Csopimunka</title>
     <meta name="author" content="Dekany Mate, Katona Janos, Palinkas Arnold">
     <link rel="stylesheet" href="stilus.css">
+    <link rel="stylesheet" href="galeria1.css">
 </head>
 <body>
     <main>
@@ -22,7 +23,14 @@
             </ul>
         </nav>
         <article>
-            
+            <div class="flex-container">
+                <div><img src="kepek1/kep2.jpg" alt="Akep2"></div>
+                <div><img src="kepek1/kep3.jpg" alt="Akep3"></div>
+                <div><img src="kepek1/kep4.jpg" alt="Akep4"></div>
+                <div><img src="kepek1/kep5.jpg" alt="Akep5"></div>
+                <div><img src="kepek1/kep6.jpg" alt="Akep6"></div>
+                <div><img src="kepek1/kep9.jpg" alt="Akep9"></div>
+            </div>
         </article>
         <footer>
 
