--- a/galeria2.html
+++ b/galeria2.html
@@ -6,6 +6,7 @@
     <title>Csopimunka</title>
     <meta name="author" content="Dekany Mate, Katona Janos, Palinkas Arnold">
     <link rel="stylesheet" href="stilus.css">
+    <link rel="stylesheet" href="galeria2.css">
 </head>
 <body>
     <main>
@@ -22,7 +23,16 @@
             </ul>
         </nav>
         <article>
-            
+            <img src="kepek2/kep.jpg" alt="">
+            <img src="kepek2/kep1.jpg" alt="">
+            <img src="kepek2/kep2.jpg" alt="">
+            <img src="kepek2/kep3.jpg" alt="">
+            <img src="kepek2/kep4.jpg" alt="">
+            <img src="kepek2/kep5.jpg" alt="">
+            <img src="kepek2/kep6.jpg" alt="">
+            <img src="kepek2/kep7.jpg" alt="">
+            <img src="kepek2/kep8.jpg" alt="">
+            <img src="kepek2/kep9.jpg" alt="">
         </article>
         <footer>
 
